== 2.4.2 ==
Release date: July 15, 2021
* Fixed: Compatibility issues with PHP 8

== 2.4.1 ==
Release date: July 8, 2021
* Added: Logo Carousel - Vertical and horizontal alignment options
* Added: Info Box Carousel - Pause on Hover option
* Enhancement: Info Box Carousel - Updated description control to WYSIWYG
* Fixed: Flip Box - Issue with Icon Size option
* Added: Team Member Carousel - Option to change direction of carousel

== 2.4.0 ==
Release date: June 23, 2021
* New: Wrapper Link extension
* Fixed: Info Box Carousel - Icon type text was not showing on frontend
* Enhancement: Info Box Carousel - Added  Percentage unit support to icon image width
* Enhancement: Info Box Carousel - Added default size of 100px to icon image
* Fixed: Core - PHP error in validate_html_tag() function

== 2.3.6 ==
Release date: June 1, 2021
* Added: Info Box Carousel - Centered Slides option
* Fixed: Pricing Table - Table alignment issue
* Fixed: Pricing Table - Features icon position issue

== 2.3.5 ==
Release date: May 18, 2021
* Fixed: Team Member Carousel - Position style options were not working
* Added: Pricing Table - Z-Index option for tooltip
* Enhancement: Hotspots - Replaced Animation In and Animation Out options with Animation option
* Enhancement: Updated tooltip JS code

== 2.3.4 ==
Release date: May 3, 2021
* Fixed: Twitter Timeline - Tweet limit option was not working
* Fixed: Info Box Carousel - Equal height console error
* Enhancement: Link Effects - Added support for HTML tags in text field

== 2.3.3 ==
Release date: April 26, 2021
* Fixed: Team Member - Dynamic image tag was not working
* Fixed: Logo Carousel - PHP error when logo title is used
* Fixed: Updated soon to be deprecated code
* Enhancement: Buttons, Icon List - Added support for HTML tags for text field
* Enhancement: Updated compatibility tag

== 2.3.2 ==
Release date: April 7, 2021
* Added: Content Ticker - Pause on Interaction option
* Added: Content Ticker - Heading alignment and padding options