@@ -1,5 +1,6 @@
 == 2.4.2 ==
 Release date: July 15, 2021
+* Fixed: Team Member - HTML error when link is applied to title
 * Fixed: Compatibility issues with PHP 8
 
 == 2.4.1 ==
